RemoveFields(duration) and filter internal frames